--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -18,10 +18,13 @@ textarea
   font-family: "Hammersmith One","Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", "Helvetica", "Arial", sans-serif !important
 
 .has-background-primary-dark
-  background-color: $purple
+  background-color: $primary
 
 .has-background-secondary-dark
-  background-color: $golden-yellow
+  background-color: $secondary
+
+.btn
+  background-color: green
 
 // for specificity
 #navbar
