--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -292,6 +292,12 @@ $menu-label-color: $white-ter
     top: 60px
 
 +touch
+  section
+    padding-top: 0 !important
+    padding-bottom: 0 !important
+  .section
+    padding-top: 10px !important
+
   #billboard
     display: flex
     flex-direction: column
