--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -39,90 +39,6 @@ textarea
     display: none !important
   h4
     display: none !important
-  #action_welcome_message_inner
-    display: none !important
-  form .form_builder_output
-    display: none !important
-  form .international_link-wrap
-    display: none !important
-  form .country_drop_wrap
-    display: none !important
-  form #d_sharing
-    display: none !important
-  form .ajax-loading
-    display: none !important
-  #action_info
-    display: none !important
-  #logo_wrap
-    display: none !important
-
-form
-  div#form_col1
-    display: flex
-
-  div#form_col2
-    input[type='submit']
-      cursor: pointer;
-      border: 0;
-      background-color: $violet;
-      border: 4px;
-      color: $light-violet;
-
-      font-family: $serif;
-      font-size: 18px;
-      padding: 5px 10px;
-      border-radius: 4px;
-      box-shadow: 0px 1px 1px rgba(255,255,255,0.2);
-      margin-top: 10px;
-
-      transition: background-color 0.4s, color 0.4s, font-weight 0.4s;
-
-      &:hover
-        background-color: $light-violet;
-        color: $violet;
-        font-weight: 800;
-
-
-
-    //         .core_field
-
-    //             &:nth-child(2)
-    //                 flex-grow: 1;
-    //                 flex-basis: 0;
-
-
-    //             label
-    //                 font-size: 12px;
-    //                 text-transform: uppercase;
-    //                 display: block;
-    //                 letter-spacing: 0.7pt;
-    //                 color: #333333;
-
-    //             input[type='text'],input[type='email']
-    //                 font-size: 16px;
-    //                 padding: 5px;
-    //                 border-radius: 2px;
-    //                 font-family: $sans-serif;
-    //                 border: 0;
-    //                 background-color: $lightgray;
-    //                 width: calc(100% - 20px) !important;
-    //                 margin-top: 5px;
-
-    //                 &::placeholder
-    //                     color: $lightgray
-
-
-    //                 // &.error_input
-    //                 //     background-color: $error-red;
-
-
-
-
-
-
-    form li
-        list-style: none;
-
 
 .btn
   background-color: green
@@ -151,6 +67,7 @@ h1
   font-family: Oswald
   color: $primary !important
   margin-bottom: 20px
+  font-size: 20px
 
 .navbar .navbar-link
   color: $white
@@ -255,7 +172,7 @@ $menu-label-color: $white-ter
     vertical-align: middle
     display: inline
 
-@import "~bulma"
+@import "~bulma/bulma"
 
 
 // responsiveness
