clean up h1 css

--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -63,12 +63,6 @@ textarea
   font-size: 40px
   font-weight: $font-weight-strong
 
-h1
-  font-family: Oswald
-  color: $primary !important
-  margin-bottom: 20px
-  font-size: 20px
-
 .navbar .navbar-link
   color: $white
   font-weight: $font-weight-very-strong
@@ -174,6 +168,13 @@ $menu-label-color: $white-ter
 
 @import "~bulma/bulma"
 
+// customization of bulma class
+.title
+  font-family: Oswald
+  color: $primary !important
+  margin-bottom: 20px
+  font-size: 40px !important
+  font-weight: 600
 
 // responsiveness
 +desktop
