Update homepage text

--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -49,14 +49,14 @@ textarea
 
 // for specificity
 #navbar
-  min-height: 6rem
+  min-height: 5rem
   position: fixed
   top: 0
   background: $primary
   width: 100%
   
 .navbar-title #logo
-  min-height: 6rem
+  min-height: 5rem
 
 #navbar .navbar-burger.burger
   color: $secondary
@@ -174,6 +174,11 @@ body
 
 a.navbar-link:hover
   color: $sky-blue
+
+.section
+  padding-top: 24px
+  padding-bottom: 24px
+
 
 // responsiveness
 +desktop
