--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -42,7 +42,7 @@ textarea
     display: none !important
   h4
     display: none !important
-  
+
 
 .btn
   background-color: green
@@ -54,9 +54,10 @@ textarea
   top: 0
   background: $primary
   width: 100%
-  
+
 .navbar-title #logo
   min-height: 5rem
+  margin-bottom: -10px
 
 #navbar .navbar-burger.burger
   color: $secondary
@@ -70,7 +71,7 @@ textarea
   font-weight: $font-weight-strong
 .navbar .navbar-link
   color: $black
-  font-size: 16px 
+  font-size: 16px
   font-weight: $font-weight-very-strong
 
 
@@ -158,8 +159,8 @@ span.underlined
 
 @import "~bulma/bulma"
 
-body 
-  background-color: $primary 
+body
+  background-color: $primary
 
 // customization of bulma class
 .title
@@ -168,7 +169,7 @@ body
   font-size: 40px !important
   font-weight: 600
 
-.navbar-start 
+.navbar-start
   margin-right: 0
   margin-left: auto
 
