--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -74,6 +74,14 @@ textarea
   font-size: 16px
   font-weight: $font-weight-very-strong
 
+  &.navbar-item
+    &:hover
+      span
+        color: $black
+        border-bottom: 3px solid $sky-blue
+    &::after
+      display: none
+
 
 .content .taglist
   list-style: none
