Visual tweaks: Line height adjustments, hamburger button fix, footer color

--- a/src/components/PageUnderNavbar.module.css
+++ b/src/components/PageUnderNavbar.module.css
@@ -1,3 +1,17 @@
-.page-under-navbar {
-  margin-top: 70px;
+.page-under-navbar-desktop {
+  margin-top: 130px;
+}
+
+.page-under-navbar-mobile {
+  display: None;
+}
+
+@media (max-width: 600px) {
+  .page-under-navbar-mobile {
+    margin-top: 80px;
+    display: block;
+  }
+  .page-under-navbar-desktop {
+    display: None;
+  }
 }
