--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -55,12 +55,25 @@ textarea
   background: $primary
   width: 100%
 
-.navbar-title #logo
-  min-height: 5rem
+.navbar-title .logo
+  min-height: 7rem
   margin-bottom: -10px
 
-#navbar .navbar-burger.burger
-  color: $secondary
+.logo .mobile
+  display: none
+
+.logo .desktop
+  min-height: 7rem
+  margin-bottom: -10px
+
+@media(max-width: 600px)
+  .logo .mobile
+    max-height: 4rem
+    margin-bottom: -10px
+    display: block
+  .logo .desktop
+    display: none 
+
 
 .navbar .navbar-menu
   box-shadow:none !important
@@ -82,6 +95,12 @@ textarea
     &::after
       display: none
 
+    &.donate
+      color: $sky-blue
+      &:hover
+        span
+          color: $sky-blue
+          border-bottom: 3px solid $black
 
 .content .taglist
   list-style: none
@@ -130,7 +149,7 @@ textarea
   padding: 0 1rem
 footer.footer
   padding: 3rem 0rem 0rem
-  background-color: transparent
+  background-color: black
 
 //Menu overrides
 $menu-item-color: $white-ter
@@ -163,12 +182,39 @@ $menu-label-color: $white-ter
 span.underlined
   padding-bottom: 4px
   border-bottom: 6px solid $sky-blue
-  line-height: 48px
+  line-height: 60px
 
 @import "~bulma/bulma"
 
 body
   background-color: $primary
+
+#navbar .navbar-burger.burger
+  color: $black
+  height: 5rem
+  width: 70px
+
+.navbar-burger span 
+  width: 45px
+  left: calc(50% - 30px)
+  height: 3px
+.content .title
+  margin-bottom: 2rem
+
+.navbar-burger span:nth-child(1) 
+    top: calc(50% - 12px)
+
+.navbar-burger span:nth-child(2)
+  top: calc(50% - 1px)
+
+.navbar-burger span:nth-child(3)
+  top: calc(50% + 10px)
+  
+.navbar-burger.is-active span:nth-child(1)
+    transform: translateY(13px) rotate(45deg);
+
+.navbar-burger.is-active span:nth-child(3)
+    transform: translateY(-8px) rotate(-45deg);
 
 // customization of bulma class
 .title
@@ -217,9 +263,6 @@ a.navbar-link:hover
       justify-content: center
       width: 100%
 
-  .navbar .navbar-link
-    color: $link-color-on-light
-
 .issue
-  margin-bottom: 20px
+  margin-bottom: 30px
   text-align: left
