--- a/src/components/Footer.module.css
+++ b/src/components/Footer.module.css
@@ -7,25 +7,22 @@
 }
 
 .footer-info {
-  color: black;
+  color: white;
   display: inline-block;
   margin-bottom: 10px
 }
 
 .contact-line {
-  color: black;
+  color: white;
   font-size: 12px;
 }
 
 .contact-line a {
   cursor: pointer;
-  color: black;
+  color: white;
 }
 
 .contact-line a:hover {
-  color: black;
+  color: #009bdf;
 }
 
-.social a {
-  filter: invert(100%);
-}
