--- a/src/components/Billboard.module.css
+++ b/src/components/Billboard.module.css
@@ -4,7 +4,16 @@
 }
 
 .action-network-section {
-  display: 'flex';
-  justify-content: 'center';
-  align-items: 'center';
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+@media screen and (min-width: 768px) {
+  .hero--image {
+    width: 100%;
+    max-width: 1345px;
+    height: 460px;
+    background-position: center;
+  }
 }
