fix mobile safari styles

--- a/src/components/actionNetwork.sass
+++ b/src/components/actionNetwork.sass
@@ -18,6 +18,7 @@ $black: #2b2523
     border-radius: .2rem
     font-size: .8rem
     box-shadow:  0 0 2px 0 $black
+    -webkit-appearance: none
 
 html.can_embed-html
     margin: 0
