--- a/src/components/Billboard.module.css
+++ b/src/components/Billboard.module.css
@@ -12,7 +12,7 @@
 
 @media screen and (min-width: 768px) {
   .hero--image {
-    height: 460px;
+    min-height: 460px;
     object-fit: cover;
     object-position: center;
   }
@@ -21,7 +21,7 @@
     position: absolute;
     width: 45%;
     right: 1rem;
-    top: 150px;
+    top: 140px;
   }
 }
 
