--- a/src/components/Billboard.module.css
+++ b/src/components/Billboard.module.css
@@ -4,7 +4,25 @@
 }
 
 .action-network-section {
-  display: 'flex';
-  justify-content: 'center';
-  align-items: 'center';
+  display: flex;
+  padding: 5px;
+  justify-content: center;
+  align-items: center;
 }
+
+@media screen and (min-width: 768px) {
+  .hero--image {
+    min-height: 460px;
+    object-fit: cover;
+    object-position: center;
+  }
+
+  .action-network-section {
+    position: absolute;
+    width: 45%;
+    right: 1rem;
+    top: 140px;
+  }
+}
+
+
