--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -255,6 +255,9 @@ a.navbar-link:hover
 
 .issue
   margin-bottom: 30px
+  max-width: 800px
+  margin-left: auto
+  margin-right: auto
   text-align: left
 
 #can-form-area-join-our-campaign-for-progress-2 #can-embed
