Adding policy bugs
Added images to issues page with alt text for accessibility

--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -225,6 +225,12 @@ body
 .navbar-burger.is-active span:nth-child(3)
     transform: translateY(-8px) rotate(-45deg);
 
+.issue-bug
+    max-width: 280px
+    max-height: 180px
+    display: block
+    margin: 3rem auto 1rem auto
+
 // customization of bulma class
 .title
   color: $black !important
