--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -96,7 +96,7 @@ textarea
   font-weight: $font-weight-strong
 .navbar .navbar-link
   color: $black
-  font-size: 16px
+  font-size: 18px
   font-weight: $font-weight-very-strong
 
   &.navbar-item
@@ -162,8 +162,9 @@ textarea
 .navbar-brand .navbar-item.logo
   padding: 0 1rem
 footer.footer
-  padding: 3rem 0rem 0rem
+  padding: 0rem 0rem 0rem
   background-color: black
+  margin-top: 30px
 
 //Menu overrides
 $menu-item-color: $white-ter
@@ -306,22 +307,24 @@ a.navbar-link
     width: 100%
     justify-content: center
     flex-wrap: wrap
+    margin-bottom: 20px
 
     .donate-picker--select
       @extend %transition
       -webkit-border-radius: 100%
       -moz-border-radius: 100%
       border-radius: 100%
-      border: 2px solid $sky-blue
+      background: none
+      border: 3px solid $sky-blue
       color: $black
       font-size: 30px
       font-weight: 600
-      width: 120px
-      height: 120px
+      width: 90px
+      height: 90px
       display: flex
       align-items: center
       justify-content: center
-      margin: 20px;
+      margin: 5px 10px
 
       &:hover
         border: 4px solid $sky-blue
