--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -269,6 +269,20 @@ a.navbar-link
     display: flex
     flex-direction: column
 
+.issue_links
+  max-width: 900px
+  margin-left: auto
+  margin-right: auto
+  text-align: center
+  font-weight: 800
+  font-size: 16px
+
+.issue_link
+  color: $sky-blue
+  margin: 0 8px
+
+
+
 .issue
   margin-bottom: 30px
   max-width: 800px
