--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -239,6 +239,7 @@ body
     margin: 3rem auto 1rem auto
 
 // customization of bulma class
+
 .title
   color: $black !important
   margin-bottom: 25px
@@ -257,6 +258,9 @@ a.navbar-link
 .section
   padding-top: 24px
   padding-bottom: 24px
+  @media only screen and (min-width: 786px)
+    margin-left: 20px
+    margin-right: 20px
 
 +touch
   section
@@ -314,6 +318,55 @@ a.navbar-link
     background-color: $white
     color: $sky-blue
     box-shadow: inset 0px 0px 0px 2px $sky-blue
+
+// Homepage
+
+.intro_para
+  max-width: 820px
+  font-size: 1.4rem
+  margin: 0 auto
+
+.readmore
+  display: inline
+  margin-left: 10px
+  text-transform: uppercase
+  font-weight: 800
+  color: $sky-blue
+  font-size: 1rem
+
+.issue_teaser
+  margin-top: 20px
+  @media only screen and (min-width: 768px)
+    margin-bottom: 40px
+    min-height: 120px
+  @media only screen and (max-width: 767px)
+    margin-bottom: 20px 
+
+.issue-bug_container
+  width: 240px
+  @media only screen and (min-width: 768px)
+   float: left
+   margin-right: 40px
+  @media only screen and (max-width: 767px)
+   margin: auto
+   display: block
+   margin-bottom: 10px
+
+.issue-bug_teaser
+  max-width: 240px
+  max-height: 120px
+  margin: auto
+  display: block
+
+.issue_blurb
+  @media only screen and (min-width: 768px)
+   padding: 20px
+  @media only screen and (max-width: 768px)
+    max-width: 540px
+    display: block
+    margin: auto
+
+
 
 // Donate module
 .donate-picker--container
