Issues Page improvements
• Improved table of contents styling (still WIP)

• Added alt text to issues bugs

--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -274,7 +274,7 @@ a.navbar-link
     flex-direction: column
 
 .issue_links
-  max-width: 900px
+  max-width: 1594px
   margin-left: auto
   margin-right: auto
   text-align: center
@@ -287,6 +287,10 @@ a.navbar-link
 .issue_link
   color: $sky-blue
   margin: 0 8px
+
+.spacer
+  width: 10px
+  height: 10px
 
 .issue
   margin-bottom: 30px
