Added register to vote

--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -117,6 +117,20 @@ textarea
           color: $sky-blue
           border-bottom: 3px solid $black
 
+.register-vote
+  border-radius: .25rem
+  position: absolute
+  top: 5.75rem
+  right: 2rem
+  padding: .3rem 1rem
+  cursor: pointer;
+  background-color: #73308b;
+  text-transform: uppercase;
+  color: white;
+  font-weight: bold;
+  font-size: .9rem;
+
+
 .content .taglist
   list-style: none
   margin-bottom: 0
