--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -119,16 +119,20 @@ textarea
 
 .register-vote
   border-radius: .25rem
+  padding: .3rem 1rem
+  cursor: pointer
+  background-color: #73308b
+  text-transform: uppercase
+  color: white
+  font-weight: bold
+  font-size: .9rem
   position: absolute
   top: 5.75rem
-  right: 2rem
-  padding: .3rem 1rem
-  cursor: pointer;
-  background-color: #73308b;
-  text-transform: uppercase;
-  color: white;
-  font-weight: bold;
-  font-size: .9rem;
+  @media only screen and (min-width: 768px)
+    right: 2rem
+  @media only screen and (max-width: 767px)
+    right: 10px
+
 
 
 .content .taglist
