--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -298,6 +298,9 @@ a.navbar-link
   text-align: center
   font-weight: 800
   font-size: 16px
+  position: sticky
+  top: 130px
+  background: $paper
   @media only screen and (max-width: 785px)
    display: none
 
@@ -320,7 +323,7 @@ a.navbar-link
 .anchor
   position: relative
   display: block
-  top: -130px
+  top: -230px
 
 .button--primary
   @extend %transition
