Fix paragraph break bug

--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -258,6 +258,10 @@ body
 
 // customization of bulma class
 
+p
+  margin-bottom: 1rem !important
+
+
 .title
   color: $black !important
   margin-bottom: 25px
