--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -295,6 +295,8 @@ a.navbar-link
     display: flex
     flex-direction: column
 
+// Policies ToC
+
 .issue_links
   max-width: 1594px
   margin-left: auto
@@ -353,7 +355,7 @@ a.navbar-link
 .intro_para
   max-width: 820px
   font-size: 1.4rem
-  margin: 0 auto
+  margin: 0 auto 20px
 
 .readmore
   display: inline
@@ -363,18 +365,23 @@ a.navbar-link
   color: $sky-blue
   font-size: 1rem
 
+.issue_teaser_container
+  margin-bottom: 40px
+
 .issue_teaser
+  display: inline-block
+  vertical-align: top
   margin-top: 20px
+  margin-left: auto
+  margin-right: auto
   @media only screen and (min-width: 768px)
-    margin-bottom: 40px
-    min-height: 120px
+    width: 50%
+    margin-bottom: 10px
   @media only screen and (max-width: 767px)
-    margin-bottom: 20px 
+    display: block
 
 .issue-bug_container
-  width: 240px
   @media only screen and (min-width: 768px)
-   float: left
    margin-right: 40px
   @media only screen and (max-width: 767px)
    margin: auto
@@ -389,11 +396,16 @@ a.navbar-link
 
 .issue_blurb
   @media only screen and (min-width: 768px)
-   padding: 20px
+   padding: 0 20px 0 0
+   max-width: 540px
+   margin: auto
   @media only screen and (max-width: 768px)
     max-width: 540px
     display: block
     margin: auto
+
+.issues.readmore
+  top: 40px
 
 
 
