--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -408,6 +408,33 @@ a.navbar-link
   top: 40px
 
 
+// Press Section
+
+.press_clipping
+  max-width: 50%
+  margin: auto
+
+.press_headline
+  font-size: 1.75rem
+  line-height: 2rem
+  padding-right: 40px
+  color: $black
+  margin-bottom: 10px
+  &:hover
+    color: $sky-blue
+    cursor: pointer
+
+.press_credit
+  text-transform: uppercase
+  font-weight: bold
+  font-size: 1rem
+  color: $black
+
+.press_date
+  font-size: 1rem
+  text-transform:
+
+
 
 // Donate module
 .donate-picker--container
@@ -415,6 +442,7 @@ a.navbar-link
   flex-direction: column
   align-items: center
   margin-top: 30px
+  margin-bottom: 40px
 
   .donate-picker--select-container
     display: flex
