--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -212,10 +212,10 @@ $menu-label-color: $white-ter
     vertical-align: middle
     display: inline
 
-span.underlined
-  padding-bottom: 4px
-  border-bottom: 6px solid $sky-blue
-  line-height: 60px
+//span.underlined
+//  padding-bottom: 4px
+//  border-bottom: 6px solid $sky-blue
+//  line-height: 60px
 
 @import "~bulma/bulma"
 
@@ -265,8 +265,12 @@ p
 .title
   color: $black !important
   margin-bottom: 25px
-  font-size: 40px !important
+  font-size: 3rem !important
   font-weight: 600
+  padding-bottom: 8px
+  border-bottom: 6px solid $sky-blue
+  @media only screen and (max-width: 768px)
+    font-size: 2.5rem !important
 
 .navbar-start
   margin-right: 0
@@ -393,6 +397,9 @@ a.navbar-link
   max-height: 120px
   margin: auto
   display: block
+  @media only screen and (max-width: 768px)
+    max-width: 200px
+    max-height: 100px
 
 .issue_blurb
   @media only screen and (min-width: 768px)
@@ -411,28 +418,44 @@ a.navbar-link
 // Press Section
 
 .press_clipping
-  max-width: 50%
+  max-width: 820px
   margin: auto
+  margin-bottom: 40px
 
 .press_headline
-  font-size: 1.75rem
-  line-height: 2rem
+  font-size: 2rem
+  line-height: 2.5rem
+  font-weight: bold
   padding-right: 40px
-  color: $black
   margin-bottom: 10px
+  color: $black
+  @media only screen and (max-width: 768px)
+    font-size: 1.75rem
+    line-height: 2rem
   &:hover
     color: $sky-blue
     cursor: pointer
+
+.press_quote
+  margin-bottom: 10px
 
 .press_credit
   text-transform: uppercase
   font-weight: bold
   font-size: 1rem
   color: $black
+  margin-right: 10px
+  &:hover
+    color: $sky-blue
+    cursor: pointer
 
 .press_date
   font-size: 1rem
-  text-transform:
+  text-transform: none
+  margin-left: 10px
+  font-weight: 400
+  display: inline
+  color: $lightgray
 
 
 
@@ -442,7 +465,7 @@ a.navbar-link
   flex-direction: column
   align-items: center
   margin-top: 30px
-  margin-bottom: 40px
+  margin-bottom: 60px
 
   .donate-picker--select-container
     display: flex
@@ -474,3 +497,6 @@ a.navbar-link
     .donate-picker--select--selected
       background-color: $sky-blue
       color: $white
+
+.button--primary
+  
